--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
 
   # This command builds the site
-  command = "yarn run build"
+  command = "npm run build"
 
   # This is the directory that will be deployed
   publish = "build"
