--- a/package.json
+++ b/package.json
@@ -7,9 +7,18 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "class-validator": "^0.12.2",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
-    "graphql": "^15.3.0",
-    "serverless-http": "^2.5.0"
+    "graphql": "^15.4.0",
+    "mongoose": "^5.11.8",
+    "reflect-metadata": "^0.1.13",
+    "serverless-http": "^2.5.0",
+    "type-graphql": "^1.1.1"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^5.10.3",
+    "ts-node-dev": "^1.1.1",
+    "typescript": "^4.1.3"
   }
 }
