--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "fcsouza <fcsouza18@hotmail.com>",
   "license": "MIT",
   "dependencies": {
+    "apollo-server": "^2.19.0",
     "body-parser": "^1.19.0",
     "class-validator": "^0.12.2",
     "express": "^4.17.1",
