--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "git@github.com:fcsouza/graphQL-api.git",
   "author": "fcsouza <fcsouza18@hotmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev src/server.ts"
+  },
   "dependencies": {
     "apollo-server": "^2.19.0",
     "body-parser": "^1.19.0",
