--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.4.0",
-    "mongoose": "^5.11.8",
+    "mongoose": "5.10.19",
     "reflect-metadata": "^0.1.13",
     "serverless-http": "^2.5.0",
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.10.3",
+    "@types/mongoose": "^5.10.19",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   }
