--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "fcsouza <fcsouza18@hotmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "start": "ts-node-dev src/server.ts"
   },
   "dependencies": {
     "apollo-server": "^2.19.0",
