--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.10.19",
+    "@types/mongoose": "5.10.3",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   }
